stable with previews posts and more

--- a/app/assets/stylesheets/app_specific/base.css.less
+++ b/app/assets/stylesheets/app_specific/base.css.less
@@ -45,7 +45,7 @@ table.posts{
 
 form {
   
-  #socials, #dato-del-dia{
+  #socials, #dato-del-dia, #especial-block {
       border-bottom: 1px solid gray;
     margin-bottom: 20px;
 
