--- a/app/assets/stylesheets/blog/posts.css.less
+++ b/app/assets/stylesheets/blog/posts.css.less
@@ -58,6 +58,14 @@
       background-color: #ebebeb;
       padding: 20px;
 
+      .inner {
+        background: white;
+        padding: 10px;
+      }
+      img {
+        margin-right: 20px;
+      }
+
       h1, h2, h3 {
         color: #c30;
         font-family: 'Arvo';
@@ -111,6 +119,19 @@
 
     .social {
       padding-top: 20px;
+    }
+  }
+}
+#modal-post {
+  width: 820px;
+  left: 38%;
+  .modal-body {
+    max-height: 500px;
+    .author-info {
+      display: none;
+    }
+    .title {
+      margin-left: 25px;
     }
   }
 }
