--- a/app/views/admin/portadas/index.html.slim
+++ b/app/views/admin/portadas/index.html.slim
@@ -16,6 +16,7 @@ table.table.table-striped
         th= portada.id
         td= portada.publication
         td
+          = link_to 'Preview', main_app.admin_portada_path(portada.id), class: 'btn btn-info'
           = link_to 'Edit', main_app.edit_admin_portada_path(portada.id), class: 'btn'
           = link_to 'delete', main_app.admin_portada_path(portada), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger'
 
