--- a/app/views/crowdblog/admin/posts/_form.html.slim
+++ b/app/views/crowdblog/admin/posts/_form.html.slim
@@ -84,7 +84,35 @@
       = label_tag 'post_body', 'Body', class: 'control-label'
     .controls.span12
       = f.text_area :body, :class => "span12 redactor", :rows => 20, id: 'post_bodys'
-
+.clearfix
+.row
+  .span6#especial-block
+    fieldset.fieldset
+      legend Section: Noticias Relacionadas
+    .search-news#related
+      .control-group
+        = label_tag 'Busca mas noticias', nil,class: 'control-label'
+        .controls
+          input.input-medium type="text" id="search-term"
+          = hidden_field_tag 'type','related'
+          = hidden_field_tag 'portada_id', @portada.id
+          = link_to 'Buscar', "#", class: 'btn search'
+      table.table.table-striped.posts
+        thead
+          tr
+            th
+            th Categoria
+            th Titulo Noticia
+            th Fecha
+        tbody
+          = render partial: 'admin/portadas/search_res', collection: @posts, as: :post, locals: { radio: false }
+  .span6
+    fieldset.fieldset
+      ul.droppable.well
+        - @post.related.each_with_index do |related,k|
+          li
+            = "- #{related.title}"
+          = hidden_field_tag "post[related_attributes][#{k}][id]", related.id, class: 'related'
 
 coffee:
   $ ->
