--- a/app/views/crowdblog/posts/show.html.slim
+++ b/app/views/crowdblog/posts/show.html.slim
@@ -2,9 +2,9 @@
   = render :partial => 'crowdblog/posts/post', :object => @post, :locals => { index_view: false }
   #disqus_thread
 
-  - if Rails.env.production?
+  - unless Rails.env.production?
     coffee:
-      disqus_shortname = 'crowdinttech'
+      disqus_shortname = 'angelguardian'
 
       dsq = document.createElement('script')
       dsq.type = 'text/javascript'
@@ -25,5 +25,4 @@
   meta property='og:title' content="#{@post.title}"
   meta property='og:description' content="#{@post.title}"
   meta property='og:url' content="#{main_app.post_url(*@post.url_params).html_safe}"
-  meta property='og:image' content='http://assets0.crowdint.com/assets/logo/ocre.png'
   meta property='og:type' content='blog'
