--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,10 +8,8 @@ html
 
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arvo"
-    = auto_discovery_link_tag :rss, 'http://feeds.feedburner.com/CrowdInteractiveTechBlog'
     = javascript_include_tag "application"
     = csrf_meta_tags
-    = render 'google_analytics'
 
     coffee:
       $ ->
@@ -25,3 +23,7 @@ html
       = yield
 
 
+    #modal-post.modal.hide.fade
+      .modal-header
+        button.close aria-hidden="true" data-dismiss="modal" type="button"
+      .modal-body.posts
