--- a/app/views/admin/portadas/index.html.slim
+++ b/app/views/admin/portadas/index.html.slim
@@ -10,6 +10,7 @@ table.table.table-striped
       th
       th Fecha de publicacion
       th
+      th
   tbody
     - @portadas.each do |portada|
       tr
@@ -19,4 +20,10 @@ table.table.table-striped
           = link_to 'Preview', main_app.admin_portada_path(portada.id), class: 'btn btn-info'
           = link_to 'Edit', main_app.edit_admin_portada_path(portada.id), class: 'btn'
           = link_to 'delete', main_app.admin_portada_path(portada), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger'
+          = link_to 'Clonar', main_app.clone_portada_admin_portadas_url(id: portada.id), class: 'btn btn-success'
+        td
+          - if portada.published?
+            = link_to 'Draft!', main_app.transition_admin_portadas_url(id: portada.id, transition: 'draft'), class: 'btn'
+          - else
+            = link_to 'Publish!', main_app.transition_admin_portadas_url(id: portada.id, transition: 'publish'), class: 'btn'
 
