--- a/app/views/admin/portadas/search_post.js.haml
+++ b/app/views/admin/portadas/search_post.js.haml
@@ -1,3 +1,4 @@
+console.log('alive')
 - unless @posts.empty?
   - radio = @type == "especial" ? true : false
   $(".search-news##{@type} table tbody").html("#{escape_javascript(render partial: 'admin/portadas/search_res', collection: @posts, as: 'post', locals: { radio: radio })}")
