more links on cover, add circle imgs

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -167,6 +167,10 @@
     .resumen {
       color: #1F1B1D;
       background-image: url('/assets/resumen-more-icon-dark.gif');
+      a {
+        color: #1F1B1D;
+
+      }
     }
     .linked {
       padding: 15px;
