--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,8 +7,10 @@ html
       meta property="fb:admins" content=admin
 
     = stylesheet_link_tag "application", :media => "all"
-    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arvo"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Arvo:400,700"
     = javascript_include_tag "application"
+    link href="http://angelguardian.mx/beta/wp-content/uploads/2012/03/favicon.gif" rel="shortcut icon"
+
     = csrf_meta_tags
 
     coffee:
