--- a/app/assets/stylesheets/blog/header.css.less
+++ b/app/assets/stylesheets/blog/header.css.less
@@ -39,6 +39,30 @@ header {
         width: 170px;
         .border-radius(5px);
       }
+      .today { display: none}
+    }
+    &.inner-pages {
+      text-align: left;
+      padding: 10px;
+      h1 {
+        float: left;
+        margin-top: 20px;
+      }
+      h3 {
+        float: left;
+        margin-left: 110px;
+        font-size: 3em;
+        margin-top: 14px;
+      }
+      .search {
+        float: right;
+        margin-top: 24px;
+        margin-right: 10px;
+        .today {
+          display: block;
+          margin-left: 31px;
+        }
+      }
     }
 
   }
@@ -53,13 +77,13 @@ header {
   }
   ul.nav {
     margin-bottom: 10px;
-    li {
+    li.elements {
       font-size: 14px;
       border: 1px solid #C3C1C0;
       border-color-top: transparent;
       border-color-bottom: transparent;
       margin-right: 4px;
-      &.last {
+      &:last-child {
         margin: 0;
       }
       a {
