--- a/app/views/portada/_policiacas.html.slim
+++ b/app/views/portada/_policiacas.html.slim
@@ -7,7 +7,7 @@ section.policiacas
         = image_tag(@policiacas.posts[0].image.size_h, class: 'size-h')
 
         h2= @policiacas.posts[0].title
-        p.date= @policiacas.posts[0].published_at
+        p.date= @policiacas.posts[0].date_and_hour
         ul.related
           li
             = link_to '12:31 pm | Aumentara 1 peso el transporte publico en autobuses', "#"
@@ -20,17 +20,16 @@ section.policiacas
       .header
         = image_tag(@policiacas.posts[1].image.size_i, class: 'size-i right')
         h2= @policiacas.posts[1].title
-        p.date= @policiacas.posts[1].published_at?
+        p.date= @policiacas.posts[1].date_and_hour
         .clearfix
     article.policiaca-c
       .header
         = image_tag(@policiacas.posts[2].image.size_i, class: 'size-i')
         h2= @policiacas.posts[2].title
-        p.date= @policiacas.posts[2].published_at
+        p.date= @policiacas.posts[2].date_and_hour
         .clearfix
   
   .dato-del-dia.policiaca
-    h2.titulo-bloque Dato del día
     a href="#"
       = raw @portada.datopolicia
 
