--- a/app/views/portada/_section_a.html.slim
+++ b/app/views/portada/_section_a.html.slim
@@ -1,14 +1,14 @@
 section.section_a
   .column
     .today
-      = Time.now.to_s :long
+      = "Colima | #{l Time.now, format: :cover}"
     article.noticia-a
       .header
         = image_tag(@principal.posts[0].image.size_a, class: 'size-a')
         p.cintillo= @principal.posts[0].cintillo
         h2
           = link_to @principal.posts[0].title, main_app.post_path(*@principal.posts[0].url_params)
-        p.date.pull-left= @principal.posts[0].published_at
+        p.date.pull-left= @principal.posts[0].date_and_hour
         = link_to 'lectura rapida', main_app.quick_view_crowdblog_posts_path(id: @principal.posts[0].id), class: 'lectura-rapida pull-right', remote: true
         .clearfix
       .resumen= @principal.posts[0].resumen
@@ -19,28 +19,22 @@ section.section_a
         = image_tag(@principal.posts[1].image.size_b, class: 'size-b')
         h2
           = link_to @principal.posts[1].title, main_app.post_path(*@principal.posts[1].url_params)
-        p.date= @principal.posts[1].published_at
+        p.date= @principal.posts[1].date_and_hour
       .resumen=@principal.posts[1].resumen
       - if @principal.posts[1].related
         ul.related
           - @principal.posts[1].related.each do |related|
             li
               = link_to related.title, '#'
-
-
     article.noticia-c
       .header
         p.cintillo== @principal.posts[2].cintillo
         h2
           = link_to @principal.posts[2].title, main_app.post_path(*@principal.posts[2].url_params)
-
         p.date 
           = @principal.posts[2].author.email
-          |  | #{@principal.posts[2].published_at}
+          |  | #{@principal.posts[2].date_and_hour}
       .resumen= @principal.posts[2].resumen
-
-
-
 
 
   .column
@@ -76,7 +70,7 @@ section.section_a
         h2
           = link_to @principal.posts[3].title, main_app.post_path(*@principal.posts[3].url_params)
 
-        p.date= @principal.posts[3].published_at
+        p.date= @principal.posts[3].date_and_hour
         p.resumen= @principal.posts[3].resumen
 
     - if @principal.posts[4]
@@ -88,5 +82,5 @@ section.section_a
             = link_to @principal.posts[4].title, main_app.post_path(*@principal.posts[4].url_params)
 
 
-          p.date= @principal.posts[4].published_at
+          p.date= @principal.posts[4].date_and_hour
 
